tests/purs/passing/ExportExplicit/M1.purs
module M1 (X(X, Y), Z(..), foo) where

data X = X | Y
data Z = Z

foo :: Int
foo = 0

bar :: Int
bar = 1
